--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
+---
+layout: default
+title: Matteo Comisso - iOS/Web Developer
+---
 
-<h1>Hey there.</h1>
-
-<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Licenza Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a><br />Quest'opera è distribuita con Licenza <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribuzione - Condividi allo stesso modo 4.0 Internazionale</a>.
+<div class="hello">
+  <h1>Hey there.</h1>
+  Hi there!
+</div>
