--- a/about/index.html
+++ b/about/index.html
@@ -1,5 +1,10 @@
 ---
 layout: default
-title: About!
+title: About
 ---
-<h1>About</h1>
+Hi, I'm Matteo Comisso, a web/iOS developer.
+
+You can find me at:
+@Twitter
+@Github
+@Google+
