Various minor changes

--- a/projects/index.html
+++ b/projects/index.html
@@ -2,6 +2,7 @@
 layout: default
 title: Hobby projects
 description: Matteo Comisso
+projects: is-active
 ---
 
 I really enjoy trying new techies goods and tools.
