--- a/cv/index.html
+++ b/cv/index.html
@@ -2,7 +2,13 @@
 layout: default
 title: Matteo Comisso's CV
 description: CV Matteo Comisso
-cv: is-active
 ---
 
 <h1>CV</h1>
+<p>
+  I'm Matteo Comisso, freelance iOS and web developer.
+</p>
+
+<p>
+
+</p>
