--- a/about/index.html
+++ b/about/index.html
@@ -3,30 +3,37 @@ layout: default
 title: About
 description: About page of Matteo Comisso
 ---
-<!-- <h2>Hi, I'm Matteo Comisso, a web/iOS developer.</h2> -->
 
-<!-- You can find me here: -->
-
-<ul class="demo-list-two mdl-list">
-  <li class="mdl-list__item mdl-list__item--two-line">
-    <span class="mdl-list__item-primary-content">
-      <i class="fa fa-twitter fa-3x"></i>
-      <span>Twitter</span>
-      <span class="mdl-list__item-sub-title"><a href="https://twitter.com/teomatteo89">@teomatteo89</a></span>
-    </span>
-  </li>
-  <li class="mdl-list__item mdl-list__item--two-line">
-    <span class="mdl-list__item-primary-content">
-      <i class="fa fa-github fa-3x"></i>
-      <span>Github</span>
-      <span class="mdl-list__item-sub-title"><a href="https://github.com/mcomisso">mcomisso</a></span>
-    </span>
-  </li>
-  <li class="mdl-list__item mdl-list__item--two-line">
-    <span class="mdl-list__item-primary-content">
-      <i class="fa fa-google-plus-square fa-3x"></i>
-      <span>Google+</span>
-      <span class="mdl-list__item-sub-title">teomatteo89</span>
-    </span>
-  </li>
-</ul>
+<div class="mdl-cell mdl-cell--8-col">
+  <div class="mdl-card mdl-shadow--2dp max-width">
+    <div class="mdl-card__title">
+      <h4>You can find me here:</h4>
+    </div>
+    <div class="mdl-card__supporting-text">
+      <ul class="demo-list-two mdl-list">
+        <li class="mdl-list__item mdl-list__item--two-line">
+          <p class="mdl-list__item-primary-content">
+            <i class="fa fa-twitter fa-3x"></i>
+            <span class="about-service-title">Twitter</span>
+            <span class="mdl-list__item-sub-title">@teomatteo89<!--<a href="https://twitter.com/teomatteo89">@teomatteo89</a>--></span>
+          </p>
+        </li>
+        <li class="mdl-list__item mdl-list__item--two-line">
+          <p class="mdl-list__item-primary-content">
+            <i class="fa fa-github fa-3x"></i>
+            <span class="about-service-title">Github</span>
+            <span class="mdl-list__item-sub-title">mcomisso<!--<a href="https://github.com/mcomisso">mcomisso</a>--></span>
+          </p>
+        </li>
+        <li class="mdl-list__item mdl-list__item--two-line">
+          <p class="mdl-list__item-primary-content">
+            <i class="fa fa-google-plus-square fa-3x"></i>
+            <span class="about-service-title">Google+</span>
+            <span class="mdl-list__item-sub-title">teomatteo89</span>
+          </p>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
+<div class="mdl-cell mdl-cell--2-col"></div>
