--- a/about/index.html
+++ b/about/index.html
@@ -7,32 +7,32 @@ description: About page of Matteo Comisso
 <div class="mdl-cell mdl-cell--8-col">
   <div class="mdl-card mdl-shadow--2dp max-width">
     <div class="mdl-card__title">
-      <h4>You can find me here:</h4>
+      <h2 class="mdl-card__title-text">You can find me here:</h2>
     </div>
     <div class="mdl-card__supporting-text">
-      <ul class="demo-list-two mdl-list">
-        <li class="mdl-list__item mdl-list__item--two-line">
+      <div class="mdl-grid">
+        <div class="mdl-cell--4-col">
           <p class="mdl-list__item-primary-content">
             <i class="fa fa-twitter fa-3x"></i>
             <span class="about-service-title">Twitter</span>
             <span class="mdl-list__item-sub-title">@teomatteo89<!--<a href="https://twitter.com/teomatteo89">@teomatteo89</a>--></span>
           </p>
-        </li>
-        <li class="mdl-list__item mdl-list__item--two-line">
+        </div>
+        <div class="mdl-cell--4-col">
           <p class="mdl-list__item-primary-content">
             <i class="fa fa-github fa-3x"></i>
             <span class="about-service-title">Github</span>
             <span class="mdl-list__item-sub-title">mcomisso<!--<a href="https://github.com/mcomisso">mcomisso</a>--></span>
           </p>
-        </li>
-        <li class="mdl-list__item mdl-list__item--two-line">
+        </div>
+        <div class="mdl-cell--4-col">
           <p class="mdl-list__item-primary-content">
             <i class="fa fa-google-plus-square fa-3x"></i>
             <span class="about-service-title">Google+</span>
             <span class="mdl-list__item-sub-title">teomatteo89</span>
           </p>
-        </li>
-      </ul>
+        </div>
+      </div>
     </div>
   </div>
 </div>
