--- a/about/index.html
+++ b/about/index.html
@@ -5,28 +5,31 @@ description: About page of Matteo Comisso
 ---
 
 <div class="mdl-cell mdl-cell--8-col">
-  <div class="mdl-card mdl-shadow--2dp max-width">
-    <div class="mdl-card__title">
-      <h2 class="mdl-card__title-text">You can find me here:</h2>
-    </div>
+  <div class="mdl-card mdl-shadow--2dp">
     <div class="mdl-card__supporting-text">
+      <h2 class="mdl-card__title-text">You can find me here</h2>
+    </div>
+  </div>
+
+  <div class="mdl-card mdl-shadow--2dp">
+    <div class="mdl-card__supporting-text mdl-card--border">
       <div class="mdl-grid">
         <div class="mdl-cell--4-col">
-          <p class="mdl-list__item-primary-content">
+          <p class="">
             <i class="fa fa-twitter fa-3x"></i>
             <span class="about-service-title">Twitter</span>
-            <span class="mdl-list__item-sub-title">@teomatteo89<!--<a href="https://twitter.com/teomatteo89">@teomatteo89</a>--></span>
+            <span class="mdl-list__item-sub-title"><a href="https://twitter.com/teomatteo89">@teomatteo89</a></span>
           </p>
         </div>
         <div class="mdl-cell--4-col">
-          <p class="mdl-list__item-primary-content">
+          <p class="">
             <i class="fa fa-github fa-3x"></i>
             <span class="about-service-title">Github</span>
-            <span class="mdl-list__item-sub-title">mcomisso<!--<a href="https://github.com/mcomisso">mcomisso</a>--></span>
+            <span class="mdl-list__item-sub-title"><a href="https://github.com/mcomisso">mcomisso</a></span>
           </p>
         </div>
         <div class="mdl-cell--4-col">
-          <p class="mdl-list__item-primary-content">
+          <p class="">
             <i class="fa fa-google-plus-square fa-3x"></i>
             <span class="about-service-title">Google+</span>
             <span class="mdl-list__item-sub-title">teomatteo89</span>
