404 minor changes, home

--- a/404.html
+++ b/404.html
@@ -3,5 +3,13 @@ title: 404
 layout: error
 ---
 
+<style media="screen">
+  h2 {
+    margin-bottom: 0;
+  }
+</style>
+<p>
+  <h2 >404</h2>
+  Not Found
+</p>
 <h1>¯\_(ツ)_/¯</h1>
-<h4>Not Found</h4>
