--- a/index.html
+++ b/index.html
@@ -2,8 +2,23 @@
 layout: default
 title: Matteo Comisso
 ---
-<!-- Implement Card style -->
-<div class="hello">
-  <h1>Hey there.</h1>
-  Hi there!
+<div class="mdl-cell mdl-cell--8-col">
+  <!-- Implement Card style -->
+  <div class="mdl-card mdl-shadow--2dp max-width">
+    <div id="card_home" class="mdl-card__title mdl-card--expand mdl-color-text--white">
+      <h1 class="mdl-card__title-text">Hey there.</h1>
+    </div>
+    <div class="mdl-card__supporting-text">
+      <p>
+        This site works as a collector of ideas, a notebook, that I will (hopefully) use as self-reference in the future.
+        I love having fun with the latest technologies, mobile and web development.
+      </p>
+      <p>
+        Feel free to clone this site (button on the top right) to see another example of using <a href="http://jekyllrb.com/">jekyll</a>, <a href="https://pages.github.com/">github pages</a> or<a href="https://www.getmdl.io/"> material design lite</a>. <br>
+      </p>
+    </div>
+    <div class="mdl-card__actions mdl-card--border">
+      <a href="/about" class="mdl-button">Contact me</a>
+    </div>
+  </div>
 </div>
