--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Matteo Comisso
         I love having fun with the latest technologies, mobile and web development.
       </p>
       <p>
-        Feel free to clone this site (button on the top right) to see another example of using <a href="http://jekyllrb.com/">jekyll</a>, <a href="https://pages.github.com/">github pages</a> or<a href="https://www.getmdl.io/"> material design lite</a>. <br>
+        Feel free to clone this site (button on the top right) to see how this site is using <a href="http://jekyllrb.com/">Jekyll</a>, <a href="https://pages.github.com/">Github Pages</a> or <a href="https://www.getmdl.io/">Material Design Lite</a>. <br>
       </p>
     </div>
     <div class="mdl-card__actions mdl-card--border">
