--- a/about/index.html
+++ b/about/index.html
@@ -4,7 +4,12 @@ title: About
 description: About page of Matteo Comisso
 ---
 
-<div class="mdl-cell mdl-cell--8-col">
+<script type="text/javascript">
+  function changeSpatialHeight() {
+    // Change the shadow to match a higher level (only on mouseover)
+  }
+</script>
+<div class="mdl-cell mdl-cell--8-col" onmouseover="changeSpatialHeight()">
   <div class="mdl-card mdl-shadow--3dp max-width">
     <div class="mdl-card__title">
       <h2 class="mdl-card__title-text">Hello</h2>
@@ -27,6 +32,35 @@ description: About page of Matteo Comisso
 <div class="mdl-grid">
 <!-- This is just a separator -->
 </div>
+
+<!-- Insert Working experiences here -->
+
+<!--
+
+The structure should be 1 mdl-card for every exp. (mdl-cell mdl-cell-4-col)
+Keep one image as background of the card
+
+________________________
+|                       |
+|
+|
+|
+|
+|
+|_______________________
+| Working Exp
+| Details
+|_______________________
+| [Icon] [Icon]
+|_______________________|
+
+
+ -->
+
+<div class="mdl-grid">
+<!-- This is just a separator -->
+</div>
+
   <div class="mdl-card mdl-shadow--2dp max-width">
     <div class="mdl-card__title">
       <h2 class="mdl-card__title-text">You can find me here</h2>
