Portfolio page, image and small changes

--- a/about/index.html
+++ b/about/index.html
@@ -4,13 +4,8 @@ title: About
 description: About page of Matteo Comisso
 ---
 
-<script type="text/javascript">
-  function changeSpatialHeight() {
-    // Change the shadow to match a higher level (only on mouseover)
-  }
-</script>
-<div class="mdl-cell mdl-cell--8-col" onmouseover="changeSpatialHeight()">
-  <div class="mdl-card mdl-shadow--3dp max-width">
+<div class="mdl-cell mdl-cell--8-col">
+  <div class="mdl-card mdl-shadow--2dp max-width">
     <div class="mdl-card__title">
       <h2 class="mdl-card__title-text">Hello</h2>
     </div>
@@ -29,33 +24,6 @@ description: About page of Matteo Comisso
 
     </div>
   </div>
-<div class="mdl-grid">
-<!-- This is just a separator -->
-</div>
-
-<!-- Insert Working experiences here -->
-
-<!--
-
-The structure should be 1 mdl-card for every exp. (mdl-cell mdl-cell-4-col)
-Keep one image as background of the card
-
-________________________
-|                       |
-|
-|
-|
-|
-|
-|_______________________
-| Working Exp
-| Details
-|_______________________
-| [Icon] [Icon]
-|_______________________|
-
-
- -->
 
 <div class="mdl-grid">
 <!-- This is just a separator -->
