Round profile picture

--- a/about/index.html
+++ b/about/index.html
@@ -12,7 +12,7 @@ description: About page of Matteo Comisso
     <div class="mdl-card__supporting-text mdl-card--border">
       <div class="mdl-grid">
         <div class="mdl-cell mdl-cell--3-col">
-          <img class="mdl-shadow--3dp" src="/images/profile.gif" alt="" />
+          <img id="profile-picture" class="mdl-shadow--3dp" src="/images/profile.gif" alt="" />
         </div>
         <div class="mdl-cell mdl-cell--9-col">
           <p>
