--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Matteo Comisso
 <div class="mdl-cell mdl-cell--8-col">
   <!-- Implement Card style -->
   <div id="card_home" class="mdl-card mdl-shadow--3dp max-width">
-    <div class="mdl-card__title mdl-card--expand mdl-color-text--white">
+    <div class="mdl-card__title mdl-card--expand mdl-color-text--white mdl-color--blue-grey-100">
       <h1 class="mdl-card__title-text">Hey there.</h1>
     </div>
     <div class="mdl-card__supporting-text">
