--- a/about/index.html
+++ b/about/index.html
@@ -11,10 +11,10 @@ description: About page of Matteo Comisso
     </div>
     <div class="mdl-card__supporting-text mdl-card--border">
       <div class="mdl-grid">
-        <div class="mdl-cell mdl-cell--3-col">
+        <div class="mdl-cell mdl-cell--3-col mdl-cell--4-col-phone mdl-cell--4-offset-phone">
           <img id="profile-picture" class="mdl-shadow--3dp" src="/images/about/profile.gif" alt="" />
         </div>
-        <div class="mdl-cell mdl-cell--9-col">
+        <div class="mdl-cell mdl-cell--9-col mdl-cell--12-col-phone">
           <p>
             I am Matteo Comisso, freelance iOS - Web developer. <br>
             My interests varies all around the tech world, but I am focused on iOS/mobile development.
