--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 ---
 layout: default
-title: Blog
+title: mcomisso.io
 description: Index of blog
 ---
 <!-- List of posts -->
 <div class="mdl-cell mdl-cell--8-col ">
-{% for post in site.posts %}
 
+{% for post in site.posts %}
   <div class="single-post mdl-card max-width mdl-shadow--2dp post-margin">
-    <div class="mdl-card__title mdl-card--expand">
-      <h2 class="mdl-card__title-text">
+    <div class="mdl-card__title" style="background: url('/images/posts/{{ post.title | slugify }}.png') center/cover;">
+      <h2 class="mdl-card__title-text" style="color: white; background-color: rgba(0,0,0,0.4);">
         {{post.title}}
       </h2>
+      <p class="mdl-card__subtitle-text">
+        {{ post.date | date_to_string }}
+      </p>
     </div>
+
     <div class="mdl-card__supporting-text">
       <div class="mdl-grid">
         <div class="mdl-cell mdl-cell--10-col">
@@ -32,6 +36,9 @@ description: Index of blog
         Read more
       </a>
     </div>
+  </div>
+  <div class="mdl-grid">
+
   </div>
 {% endfor %}
 </div>
