Fixed mono column layout

--- a/about/index.html
+++ b/about/index.html
@@ -4,7 +4,7 @@ title: About
 description: About page of Matteo Comisso
 ---
 
-<div class="mdl-cell mdl-cell--8-col">
+<div class="mdl-cell mdl-cell--8-col mdl-cell--2-offset">
   <div class="mdl-card mdl-shadow--2dp max-width">
     <div class="mdl-card__title">
       <h2 class="mdl-card__title-text">Hello</h2>
