--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: mcomisso.io
 description: Index of blog
 ---
 <!-- List of posts -->
-<div class="mdl-cell mdl-cell--8-col ">
+<div class="mdl-cell mdl-cell--8-col mdl-cell--2-offset">
 
 {% for post in site.posts %}
   <div class="single-post mdl-card max-width mdl-shadow--2dp post-margin">
