Simplified 404 error page

--- a/404.html
+++ b/404.html
@@ -8,8 +8,18 @@ layout: error
     margin-bottom: 0;
   }
 </style>
-<p>
-  <h2 >404</h2>
+
+<h2 class="mdl-typography--display-2 mdl-color-text--accent">404</h2>
+<p class="mdl-typography--headline">
   Not Found
 </p>
 <h1>¯\_(ツ)_/¯</h1>
+
+<div class="mdl-grid">
+  <p class="mdl-cell--12-col mdl-typography--title">
+    What happened?
+  </p>
+  <p class="mdl-cell--12-col mdl-typography--body mdl-typography--text-left">
+    A 404 error status implies that the file or page that you're looking for could not be found.
+  </p>
+</div>
