--- a/about/index.html
+++ b/about/index.html
@@ -4,20 +4,19 @@ title: About
 description: About page of Matteo Comisso
 ---
 
-<div class="mdl-cell mdl-cell--8-col mdl-cell--2-offset">
+<div class="mdl-cell mdl-cell--8-col mdl-cell--2-offset-desktop">
   <div class="mdl-card mdl-shadow--2dp max-width">
     <div class="mdl-card__title">
       <h2 class="mdl-card__title-text">Hello</h2>
     </div>
     <div class="mdl-card__supporting-text mdl-card--border">
       <div class="mdl-grid">
-        <div class="mdl-cell mdl-cell--3-col mdl-cell--4-col-phone mdl-cell--4-offset-phone">
+        <div class="mdl-cell mdl-cell--3-col mdl-cell--4-col-phone">
           <img id="profile-picture" class="mdl-shadow--3dp" src="//gravatar.com/avatar/43f2f99fe499e2f21338b6d4a69dd46b" alt="" />
         </div>
-        <div class="mdl-cell mdl-cell--9-col mdl-cell--12-col-phone">
-          <p>
-            I am Matteo Comisso, freelance iOS - Web developer. <br>
-            My interests varies all around the tech world, but I am focused on iOS/mobile development.
+        <div class="mdl-cell mdl-cell--9-col mdl-cell--4-col-phone">
+          <p class="mdl-typhography--body">
+            I am Matteo Comisso, a web and iOS developer located in Venice, Italy.
           </p>
           <p>
             Recently I posted something about:
