--- a/about/index.html
+++ b/about/index.html
@@ -37,26 +37,7 @@ description: About page of Matteo Comisso
   <!-- This is just a separator -->
   </div>
 
-  <div class="mdl-card mdl-shadow--2dp max-width">
-    <div class="mdl-card__title">
-      <h2 class="mdl-card__title-text">Past projects</h2>
-    </div>
-    <div class="mdl-card__supporting-text">
-      <ul class="mdl-list mdl-list__item--two-line">
-        <li class="mdl-list__item mdl-list__item-primary-content">
-          <span>Blue-mate</span>
-          <span class="mdl-list__item-sub-title">
-            Blue mate was a startup built up the iBeacon and iOS stack technologies.
-          </span>
-        </li>
-      </ul>
-      <p>
-
-      </p>
-
-
-    </div>
-  </div>
+{% include past_projects.html %}
 
   <div class="mdl-grid">
   <!-- This is just a separator -->
