Paginated blog page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ description: Index of blog
 <div class="mdl-cell mdl-cell--10-col mdl-cell--1-offset-desktop mdl-cell--4-col-phone">
 
 <div class="mdl-grid">
-  {% for post in site.posts %}
+  {% for post in paginator.posts %}
   <div class="mdl-cell mdl-cell--6-col mdl-cell--4-col-phone mdl-cell--8-col-tablet">
 
     <div class="single-post mdl-card max-width mdl-shadow--2dp post-margin">
