Updated titles, projects page

--- a/projects/index.html
+++ b/projects/index.html
@@ -1,10 +1,9 @@
 ---
-layout: default
-title: Hobby projects
-description: Matteo Comisso
-projects: is-active
+layout: page
 ---
 
-I really enjoy trying new techies goods and tools.
+{% include past_projects.html %}
+<div class="mdl-grid">
 
-Lately I was interested with mobile app architectures: there's a lot of various tecnologies out there.
+</div>
+{% include current_projects.html %}
