Switched projects order

--- a/projects/index.html
+++ b/projects/index.html
@@ -2,8 +2,6 @@
 layout: page
 ---
 
-{% include past_projects.html %}
-<div class="mdl-grid">
-
-</div>
 {% include current_projects.html %}
+<div class="mdl-grid"></div>
+{% include past_projects.html %}
