--- a/about/index.html
+++ b/about/index.html
@@ -12,7 +12,7 @@ description: About page of Matteo Comisso
     <div class="mdl-card__supporting-text mdl-card--border">
       <div class="mdl-grid">
         <div class="mdl-cell mdl-cell--3-col mdl-cell--4-col-phone">
-          <img id="profile-picture" class="mdl-shadow--4dp mdl-cell--12-col" src="/images/about/profile-image.jpg" alt="" />
+          <img id="profile-picture" class="mdl-shadow--4dp mdl-cell--12-col" src="https://twitter.com/teomatteo89/profile_image?size=original" alt="" />
         </div>
         <div class="mdl-cell mdl-cell--9-col mdl-cell--4-col-phone">
           <p class="mdl-typhography--body">
