Using twitter pic as personal avatar

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: landing
 ---
 
-<div id="card-title" class="mdl-card__title mdl-card--expand">
+<div id="card-title" class="mdl-card__title mdl-card--expand" style="background: url('https://twitter.com/{{ site.author.services[1].username | remove: '@' }}/profile_image?size=original') center / cover">
   <!-- Image -->
   <div class="mdl-card__title-text" style="color: white;">
     Matteo Comisso
