Left align to error descriptions

--- a/404.html
+++ b/404.html
@@ -16,7 +16,8 @@ layout: error
 <h1>¯\_(ツ)_/¯</h1>
 
 <div class="mdl-grid">
-  <p class="mdl-cell--12-col mdl-typography--title">
+
+  <p class="mdl-cell--12-col mdl-typography--title mdl-typography--text-left">
     What happened?
   </p>
   <p class="mdl-cell--12-col mdl-typography--body mdl-typography--text-left">
