Using single template for projects

--- a/projects/index.html
+++ b/projects/index.html
@@ -2,6 +2,6 @@
 layout: page
 ---
 
-{% include current_projects.html %}
+{% include project.html project_title="Current projects" %}
 <div class="mdl-grid"></div>
-{% include past_projects.html %}
+{% include project.html project_title="Past projects" %}
