--- a/projects/index.html
+++ b/projects/index.html
@@ -2,6 +2,6 @@
 layout: page
 ---
 
-{% include project.html project_title="Current projects" %}
+{% include projects.html project_title="Current projects" %}
 <div class="mdl-grid"></div>
-{% include project.html project_title="Past projects" %}
+{% include projects.html project_title="Past projects" %}
