--- a/about/index.html
+++ b/about/index.html
@@ -86,7 +86,7 @@ description: About page of Matteo Comisso
       <h2 class="mdl-card__title-text">Get in touch</h2>
     </div>
     <div class="mdl-card__supporting-text mdl-card--border">
-      <form action="#" class="mdl-cell mdl-cell--12-col">
+      <form action="#" method="post" class="mdl-cell mdl-cell--12-col">
         <div class="mdl-grid">
           <!-- Send mail  -->
           <div class="mdl-cell mdl-cell--6-col">
