--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 layout: landing
+title: Matteo Comisso
 ---
 
 <div id="card-title" class="mdl-card__title mdl-card--expand" style="background: url('https://twitter.com/{{ site.about.services[1].username | remove: '@' }}/profile_image?size=original') center / cover">
