--- a/about/index.html
+++ b/about/index.html
@@ -7,12 +7,14 @@ description: About page of Matteo Comisso
 <div class="mdl-cell mdl-cell--8-col mdl-cell--2-offset-desktop">
   <div class="mdl-card mdl-shadow--2dp max-width">
     <div class="mdl-card__title">
-      <h2 class="mdl-card__title-text">Hello</h2>
+	<h2 class="mdl-card__title-text">Hello</h2>
     </div>
     <div class="mdl-card__supporting-text mdl-card--border">
       <div class="mdl-grid">
         <div class="mdl-cell mdl-cell--3-col mdl-cell--4-col-phone">
-          <img id="profile-picture" class="mdl-shadow--4dp mdl-cell--12-col" src="https://twitter.com/{{ site.about.services[1].username | remove: '@' }}/profile_image?size=original" alt="" />
+          <img id="profile-picture" 
+			class="mdl-shadow--4dp mdl-cell--12-col" 
+			src="https://twitter.com/{{ site.about.services[1].username | remove: '@' }}/profile_image?size=original" alt="" />
         </div>
         <div class="mdl-cell mdl-cell--9-col mdl-cell--4-col-phone">
           <p class="mdl-typhography--body">
