Minor changes in ordering post

--- a/about/index.html
+++ b/about/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: About
-description: About page of Matteo Comisso
+description: About page
 ---
 
 <div class="mdl-cell mdl-cell--8-col mdl-cell--2-offset-desktop">
@@ -12,13 +12,17 @@ description: About page of Matteo Comisso
     <div class="mdl-card__supporting-text mdl-card--border">
       <div class="mdl-grid">
         <div class="mdl-cell mdl-cell--3-col mdl-cell--4-col-phone">
-          <img id="profile-picture" 
-			class="mdl-shadow--4dp mdl-cell--12-col" 
+          <img id="profile-picture"
+			class="mdl-shadow--4dp mdl-cell--12-col"
 			src="https://twitter.com/{{ site.about.services[1].username | remove: '@' }}/profile_image?size=original" alt="" />
         </div>
         <div class="mdl-cell mdl-cell--9-col mdl-cell--4-col-phone">
           <p class="mdl-typhography--body">
-            I am Matteo Comisso, a web and iOS developer located in Venice, Italy.
+            I am Matteo Comisso, a web and iOS developer located in Venice, Italy. <br/>
+          </p>
+          <p>
+            My current interests are Swift development and server architectures/management. <br/>
+            Actually, my interests varies a lot depending on what's the hottest tech in town, but I'll stick with these for a bit.
           </p>
           <p>
             Recently I posted something about:
