--- a/about/index.html
+++ b/about/index.html
@@ -21,8 +21,8 @@ description: About page
             I am Matteo Comisso, a web and iOS developer located in Venice, Italy. <br/>
           </p>
           <p>
-            My current interests are Swift development and server architectures/management. <br/>
-            Actually, my interests varies a lot depending on what's the hottest tech in town, but I'll stick with these for a bit.
+            My current interests are Swift development and server architectures/management, but I constantly
+            stay updated with the latest technologies, trying them myself as soon as possible.<br/>
           </p>
           <p>
             Recently I posted something about:
