--- a/about/index.html
+++ b/about/index.html
@@ -11,32 +11,37 @@ description: About page
     </div>
     <div class="mdl-card__supporting-text mdl-card--border">
       <div class="mdl-grid">
-        <div class="mdl-cell mdl-cell--3-col mdl-cell--4-col-phone">
-          <img id="profile-picture"
-			class="mdl-shadow--4dp mdl-cell--12-col"
-			src="https://twitter.com/{{ site.about.services[1].username | remove: '@' }}/profile_image?size=original" alt="" />
-      <div class="mdl-grid">
-        {% for service in site.about.services %}
-        <div class="mdl-cell mdl-cell--4-col">
-          <a href="{{ service.url }}">
-            <i id="{{ service.name | slugify }}" class="fa fa-{{ service.name }} fa-2x"></i>
-          </a>
-          <div class="mdl-tooltip" for="{{ service.name | slugify }}">
-            {{ service.username }}
+        <div class="mdl-cell mdl-cell--3-col mdl-cell--8-col-tablet mdl-cell--4-col-phone">
+          <div class="mdl-grid">
+
+
+            <img id="profile-picture"
+              style="height: 100%"
+        			class="mdl-shadow--4dp mdl-cell--12-col-desktop mdl-cell--4-col-tablet mdl-cell--4-col-phone"
+        			src="https://twitter.com/{{ site.about.services[1].username | remove: '@' }}/profile_image?size=original" alt="" />
+
+            <div class="mdl-cell--12-col mdl-cell--4-col-tablet">
+              <div class="mdl-grid">
+                {% for service in site.about.services %}
+                <div class="mdl-cell mdl-cell--4-col mdl-cell--1-col-phone mdl-cell--2-col-tablet">
+                  <a href="{{ service.url }}">
+                    <i id="{{ service.name | slugify }}" class="fa fa-{{ service.name }} fa-2x"></i>
+                  </a>
+                  <div class="mdl-tooltip" for="{{ service.name | slugify }}">
+                    {{ service.username }}
+                  </div>
+                </div>
+                {% endfor %}
+              </div>
+            </div>
           </div>
-        </div>
-        {% endfor %}
-        <div class="mdl-cell mdl-cell--12-col">
-          <button class="mdl-button" type="button" name="button">Contact me</button>
-        </div>
-      </div>
         </div>
         <div class="mdl-cell mdl-cell--9-col mdl-cell--4-col-phone">
           <p class="mdl-typhography--body">
             I am Matteo Comisso, a web and iOS developer located in Venice, Italy. <br/>
           </p>
           <p>
-            My current interests are Swift development and server architectures/management, but I constantly
+            My current interests are Swift development and server side software architectures/management, but I constantly
             stay updated with the latest technologies, trying them myself as soon as possible.<br/>
           </p>
           <p>
@@ -48,13 +53,14 @@ description: About page
               {{ post.title }}
             </div>
           </p>
-          Past works I was involved in:
+          I was involved in the making of these apps:
           <div class="mdl-grid">
             {% for app in site.data.works %}
-            <div class="mdl-cell mdl-cell--3-col">
-              <a id="id{{app.name}}" href="{{ app.url }}">
+            <div class="mdl-cell mdl-cell--2-col-desktop">
+              <a href="{{ app.url }}">
                 <img src="{{ app.icon }}" alt="{{ app.name }} icon" style="width: 100%; border-radius: 15.625%;"/>
               </a>
+              <p id="id{{app.name}}" style="text-align: center;">{{app.name}}</p>
               <div class="mdl-tooltip" for="id{{ app.name }}">
                 {{ app.description }}
               </div>
